[package]
name = "codex-helper"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
description = "A Rust-based local helper / proxy for Codex CLI traffic with multi-provider routing, usage-aware switching, filtering, and session helpers."
readme = "README_EN.md"
keywords = ["codex", "proxy", "cli", "ai"]
categories = ["command-line-utilities", "development-tools", "asynchronous"]
repository = "https://github.com/Latias94/codex-helper"
homepage = "https://github.com/Latias94/codex-helper"

[[bin]]
name = "codex-helper"
path = "src/main.rs"

[[bin]]
name = "ch"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.93"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
toml = "0.8.19"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "signal", "fs"] }
axum = { version = "0.7.9", features = ["http2", "macros", "ws"] }
hyper = { version = "1.4.1", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json", "stream", "rustls-tls"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "2.0.3"
dirs = "5.0.1"
uuid = { version = "1.10.0", features = ["v4"] }
rand = "0.8.5"
futures-util = "0.3.31"
clap = { version = "4.5.20", features = ["derive"] }
regex = "1.11.1"
atty = "0.2.14"
owo-colors = "4.0.0"

[package.metadata.binstall]
pkg-url = "{ host }/{ owner }/{ repo }/releases/download/{ version }/{ name }-{ version }-{ target }.{ archive-format }"
bin-dir = "{ bin }"

[workspace.metadata.dist]
cargo-dist-version = "0.30.2"
ci = "github"
installers = ["shell", "powershell"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
pr-run-mode = "plan"
install-path = "CARGO_HOME"
install-updater = false
